# porthole

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  claude-code-review.yml
crates/porthole/: Cargo.toml
crates/porthole-adapter-macos/: Cargo.toml
crates/porthole-adapter-macos/src/: artifact.rs  attention.rs  ax.rs  capture.rs  close_focus.rs  correlation.rs  cursor.rs  display.rs  enumerate.rs  ffi.rs  frame_diff.rs  input.rs  key_codes.rs  launch.rs  lib.rs  nsscreen.rs  permissions.rs  placement.rs  search.rs  snapshot.rs  wait.rs  window_alive.rs
crates/porthole-adapter-macos/tests/: attach_integration.rs  input_integration.rs  launch_capture.rs  self_find_e2e.rs  slice_c_integration.rs
crates/porthole-core/: Cargo.toml
crates/porthole-core/src/: adapter.rs  attach_pipeline.rs  attention.rs  display.rs  error.rs  handle.rs  in_memory.rs  input.rs  input_pipeline.rs  key_names.rs  launch.rs  lib.rs  permission.rs  placement.rs  replace_pipeline.rs  search.rs  surface.rs  wait.rs  wait_pipeline.rs
crates/porthole-protocol/: Cargo.toml
crates/porthole-protocol/src/: attention.rs  close_focus.rs  error.rs  info.rs  input.rs  launches.rs  lib.rs  placement.rs  screenshot.rs  search.rs  system_permission.rs  wait.rs
crates/porthole/src/: ancestry.rs  client.rs  key_syntax.rs  launchd.rs  lib.rs  main.rs  runtime.rs
crates/porthole/src/commands/: attach.rs  attention.rs  click.rs  close.rs  displays.rs  focus.rs  info.rs  install.rs  interrupt.rs  key.rs  launch.rs  mod.rs  onboard.rs  place.rs  replace.rs  screenshot.rs  scroll.rs  search.rs  send.rs  send_keys.rs  text.rs  track.rs  wait.rs
crates/portholed/: Cargo.toml
crates/portholed/src/: lib.rs  main.rs  runtime.rs  server.rs  state.rs
crates/portholed/src/routes/: attach.rs  attention.rs  close_focus.rs  errors.rs  info.rs  input.rs  launches.rs  mod.rs  place.rs  replace.rs  screenshot.rs  system_permissions.rs  wait.rs
crates/portholed/tests/: cli_info.rs  slice_a_e2e.rs  slice_b_e2e.rs  slice_c_e2e.rs
docs/: 2026-04-20-window-evidence-experience-report.md  development.md  porthole_spec.md  roadmap.md
docs/recipes/: terminal-orchestration.md
docs/superpowers/plans/: 2026-04-21-porthole-slice-a.md  2026-04-21-porthole-slice-b.md  2026-04-21-porthole-v0-foundation.md  2026-04-22-porthole-quality-round.md  2026-04-22-porthole-slice-c.md  2026-04-23-porthole-polish-round.md  2026-04-24-porthole-system-permissions.md
docs/superpowers/specs/: 2026-04-20-porthole-design.md  2026-04-21-porthole-slice-a-design.md  2026-04-21-porthole-slice-b-design.md  2026-04-22-porthole-slice-c-design.md  2026-04-23-porthole-permissions-slice-design.md  2026-04-27-launch-correlation-pid-descendant.md
scripts/: dev-bundle.sh  manual-terminal-smoke.sh
scripts/tests/: test-dev-bundle.sh
