[workspace]
resolver = "3"
members = [
    "crates/porthole-core",
    "crates/porthole-protocol",
    "crates/portholed",
    "crates/porthole",
    "crates/porthole-adapter-macos",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/flotilla-org/porthole"

[workspace.dependencies]
async-trait = "0.1"
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio", "matched-path"] }
bytes = "1"
clap = { version = "4", features = ["derive"] }
hyper = { version = "1", features = ["http1", "client", "server"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }
hyperlocal = "0.9"
image = { version = "0.25", default-features = false, features = ["png"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
