[package]
name = "porthole-adapter-macos"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait = { workspace = true }
porthole-core = { path = "../porthole-core" }
regex = "1"
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
image = { workspace = true }
bytes = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = { version = "0.24", features = ["highsierra"] }
core-foundation = "0.10"
objc2 = "0.5"
objc2-foundation = "0.2"
objc2-app-kit = { version = "0.2", features = ["NSRunningApplication", "NSWorkspace", "libc"] }

[dev-dependencies]
porthole = { path = "../porthole" }
portholed = { path = "../portholed" }
porthole-core = { path = "../porthole-core" }
serde_json = { workspace = true }
tempfile = "3"
tokio = { workspace = true }

[lints]
workspace = true
