[package]
name = "porthole"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
hyperlocal = { workspace = true }
http-body-util = "0.1"
porthole-core = { path = "../porthole-core" }
porthole-protocol = { path = "../porthole-protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lib]
name = "porthole"
path = "src/lib.rs"

[[bin]]
name = "porthole"
path = "src/main.rs"

[lints]
workspace = true
